--- a/index.html
+++ b/index.html
@@ -21,10 +21,55 @@
   <div id="nivel" class="container text-center mt-5 level-screen"  style="display: none;">
     <h2 class="mb-4 text-success">Escolha o Nível</h2>
     <div class="d-flex justify-content-center flex-wrap gap-3">
-      <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(0)">🐾 Nível 1</button>
-      <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(1)">🎋 Nível 2</button>
-      <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(2)">🌈 Nível 3</button>
-      <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(4)">🔥 Nível 4</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(0)">🐾 Nível 1</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(1)">🎋 Nível 2</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(2)">🌈 Nível 3</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(4)">🔥 Nível 4</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(3)">🌟 Nível 5</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(5)">🌸 Nível 6</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(6)">🧩 Nível 7</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(7)">🍀 Nível 8</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(8)">🎨 Nível 9</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(9)">🎮 Nível 10</button>
+
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(10)">🐾 Nível 11</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(11)">🪻 Nível 12</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(12)">🧠 Nível 13</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(13)">🫧 Nível 14</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(14)">🍃 Nível 15</button>
+
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(15)">🎯 Nível 16</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(16)">🧵 Nível 17</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(17)">🐉 Nível 18</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(18)">🦋 Nível 19</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(19)">🏵️ Nível 20</button>
+
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(20)">🐚 Nível 21</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(21)">🧸 Nível 22</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(22)">🌼 Nível 23</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(23)">🍭 Nível 24</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(24)">🧃 Nível 25</button>
+
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(25)">🎁 Nível 26</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(26)">🎵 Nível 27</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(27)">🎡 Nível 28</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(28)">🌻 Nível 29</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(29)">🍓 Nível 30</button>
+
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(30)">🍩 Nível 31</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(31)">🫐 Nível 32</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(32)">🍉 Nível 33</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(33)">🧇 Nível 34</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(34)">🧁 Nível 35</button>
+
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(35)">🪅 Nível 36</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(36)">🎂 Nível 37</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(37)">🎈 Nível 38</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(38)">🪼 Nível 39</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(39)">🪄 Nível 40</button>
+
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(40)">🪻 Nível 41</button>
+    <button class="btn btn-outline-secondary btn-lg" onclick="startGameWithLevel(41)">🌺 Nível 42</button>
 
     </div>
   </div>
