--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 
 <!-- Tela de jogo -->
 <div class="container text-center mt-5 game-screen" style="display: none;">
-  <h2 class="mb-4 text-primary">🐼 Bamboloo</h2>
+  <h2 class="mb-2 text-primary">🐼 Bamboloo</h2>
+<h4 id="level-indicator" class="mb-4 text-success">🎯 Nível 1</h4>
   <div class="row justify-content-center" id="game-board"></div>
   <p class="mt-3">Movimentos: <span id="move-count">0</span></p>
   <button class="btn btn-info btn-lg shadow mt-3 me-2" onclick="backToLevelScreen()">⬅️ Voltar</button>
